--- a/eCommerce/eCommerceServer/eCommerce.WebAPI/appsettings.json
+++ b/eCommerce/eCommerceServer/eCommerce.WebAPI/appsettings.json
@@ -8,5 +8,10 @@
     "AllowedHosts": "*",
     "ConnectionStrings": {
         "SqlServer": "Data Source=(localdb)\\MSSQLLocalDB;Initial Catalog=InfotecheCommerceDb;Integrated Security=True;Connect Timeout=30;Encrypt=False;Trust Server Certificate=False;Application Intent=ReadWrite;Multi Subnet Failover=False"
+    },
+    "Jwt": {
+        "Issuer": "Infotech",
+        "Audience": "Students",
+        "SecretKey": "136935de-d1e8-448f-b870-ed12388b3a189e6317dd-bf0b-4668-a844-aa1d5467a1fb8a8eba8c-a943-4166-baa3-b5c8bc238870asdasda2awdaasda2d22d1e8-448f-b870-ed12388"
     }
 }
